--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+
+
+body, html {
   margin: 0;
   display: flex;
   place-items: center;
+  height: 100%;
 }
 
 h1 {
